@@ -1,3 +1,6 @@
+27.sep (ws)
+      - add two new functions for note edit mode: "q" reduces the duration of
+        the last entered note/rest by half, "w" doubles it
 25.sep (ws)
       - note velocity can now be edited in note properties dialog and pianoroll editor
       - forward flip command for beamed chords to beam
